* THEMES: Partially fix for Ticket #1787: Broken layout in IE because of doctype definition
git-svn-id: https://i-mscp.svn.sourceforge.net/svnroot/i-mscp/trunk@1682 15a38060-5cfe-4f5c-bf9d-b5d42b1378a7

--- a/gui/themes/omega_original/css/ispcp.css
+++ b/gui/themes/omega_original/css/ispcp.css
@@ -202,7 +202,7 @@ td.content3 {
 	color:				#ffffff;
 	white-space:		nowrap;
 	background:			#000000;
-	height:				30px;
+	line-height:		24px;
 	padding:			2px;
 	padding-left:		5px;
 	border-bottom:		2px solid #000000;
